--- a/oneEarth.html
+++ b/oneEarth.html
@@ -21,7 +21,7 @@
           <a href=#aboutslab>Security and Privacy</a>
           <a href=#aboutslab>Customer Service</a>
           <a href=#aboutslab>Social Media Accounts</a>
-          <a href="logIn.html">Log out</a>
+          <a href="index.html">Log out</a>
     </div>
    <div id="main">
     <span id="openBtn" style="font-size:20px;cursor:pointer" onclick="openNav()">☰</span>
