--- a/oneEarth.html
+++ b/oneEarth.html
@@ -120,7 +120,7 @@ Country of Origin:Occidental Mindoro Philippines</p>
         <div class="main_Container2">
     <div class="image-container">
         <div class="image-wrapper">
-            <img src="img/_132396749_gettyimages-1796122426.jpg.webp" alt="climate" class="solar-image">
+            <img src="img/Screenshot 2024-05-02 112259.png" alt="climate" class="solar-image">
             <p class="image-label">Community Buildings programme.The funds are issued for <br>improvements like solar panels, insulation and heat pumps.<br> The resulting savings could allow groups to put more of their <br>resources into their activities, <br>rather than paying increasing energy bills. The National Lottery Community Fund is launching a £5m Sustainable. <div class="bold-text">The National Lottery Community Fund is launching a £5m Sustainable</div> </p>
         </div>
         <div class="image-wrapper">
@@ -128,7 +128,7 @@ Country of Origin:Occidental Mindoro Philippines</p>
             <p class="image-label">Campaigners have gathered on a beach in West Sussex to protest against sewage. Surfers Against Sewage (SAS) organised the demonstration at Kingston Beach, near Shoreham. The organisation said it wanted "Southern Water to end dumping sewage in our waters here". Southern Water said it shared the communities’ "passion for our local environment". <div class="bold-text">Campaigners gather on beach insewage protest</div> </p>
         </div>
         <div class="image-wrapper">
-            <img src="img/_132243959_riversoar.jpg.webp" alt="climate" class="flood-image">
+            <img src="img/Screenshot 2024-05-02 112241.png" alt="climate" class="flood-image">
             <p class="image-label">Prof Sarah Gabbott, of the University of Leicester, said there were countless numbers of aluminium cans and plastic bottles washed up by the River Soar. She said: "The litter clogs up the river and causes even more flooding." <div class="bold-text">Leicester: Floods leave river 'festooned' with litter</div> </p>
         </div>
         <div class="image-wrapper">
