--- a/oneEarth.html
+++ b/oneEarth.html
@@ -136,7 +136,7 @@ Country of Origin:Occidental Mindoro Philippines</p>
           <p class="image-label">The blaze, which started on 16 June, destroyed 16 hectares of forest and scrubland at Longmoor Camp, Hampshire. The MoD said the ground was pre-soaked with water and explosive charges were elevated off the ground in areas with no vegetation. <div class="bold-text">Army explosives training caused forest fire at Hampshire camp</div> </p>
         </div>
         <div class="image-wrapper">
-            <img src="img/_130152456_mediaitem130152455.jpg.webp" alt="climate" class="forestFire-image">
+            <img src="img/_130152456_mediaitem130152455.webp" alt="climate" class="forestFire-image">
             <p class="image-label">The iconic Arctic species normally feed on ringed seals that they catch on ice floes offshore. But as the ice disappears in a warming world, many bears are spending greater amounts of time on shore, eating bird's eggs, berries and grass. However the animals rapidly lose weight on land, increasing the risk of death.<div class="bold-text">Climate change: Polar bears face starvation threat as ice melts</div> </p>
         </div>
     </div>
