--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ button[type="submit"]:hover {
             var username = document.getElementById('username').value;
             var password = document.getElementById('password').value; 
           
-            if (username === "meljohnmateo" && password === "password") {
+            if (username === "meljohnmateo" && password === "mateo0088") {
                 window.location.href = "oneEarth.html";
                 alert("Log in Successful! Click 'OK' to proceed");
 
